# unicef-security

./: .gitignore  .isort.cfg  .travis.yml  CHANGES  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
src/unicef_security/: __init__.py  admin.py  apps.py  backends.py  config.py  graph.py  middleware.py  models.py  pipeline.py  sync.py  urls.py  utils.py  views.py
src/unicef_security/migrations/: 0001_initial.py  0002_auto_20201028_0154.py  0003_alter_user_email.py  0003_auto_20220406_2307.py  0004_delete_user.py
src/unicef_security/templates/: unauthorized.html
src/unicef_security/templates/admin/: base_site.html  login.html
src/unicef_security/templatetags/: security.py
tests/: .coveragerc  conftest.py  factories.py  fixtures.py  test_admin.py  test_admin_smoke.py  test_azure.py  test_backends.py  test_graph.py  test_models.py  test_pipeline.py  test_sync.py  test_tasks.py  test_template_tags.py  vcrpy.py
tests/cassettes/test_business_area_admin_sync/: business_area.yaml
tests/cassettes/test_filter_users_by_email/: test_user_data.yml
tests/cassettes/test_get_page/: test_user_data.yml
tests/cassettes/test_get_user_by_token/: test_token.yml
tests/cassettes/test_iter/: test_user_data.yml
tests/cassettes/test_load_business_area/: load_business_area.yml
tests/cassettes/test_load_region/: load_region.yml
tests/cassettes/test_region_admin_sync/: load_region.yaml
tests/cassettes/test_search_users/: test_user_data.yml
tests/cassettes/test_syncronize_err/: test_user_data.yml
tests/cassettes/test_token/: test_token.yml
tests/cassettes/test_user_admin_link_user/: test_user_data.yml
tests/cassettes/test_user_admin_link_user_err/: test_user_data.yml
tests/cassettes/test_user_admin_load_admin_users/: test_user_data.yml
tests/cassettes/test_user_admin_load_users/: test_user_data.yml
tests/cassettes/test_user_admin_sync_user/: r_test_token.yml  test_token.yml  test_user_data.yml
tests/cassettes/test_user_admin_sync_user_fail/: test_user_data.yml
tests/cassettes/test_user_data/: test_user_data.yml
tests/demoproject/: factories.py
tests/demoproject/demo/: admin.py  factories.py  models.py  settings.py  urls.py
tests/demoproject/demo/migrations/: 0001_initial.py
tests/factories/: __init__.py  social.py  user.py
tests/vcr_cassettes/: load_business_area.yml  load_region.yml  test_token.yml  test_user_data.yml
